rabbitmq-server (3.7.18-1) unstable; urgency=medium

  * New upstream release.
    - Can be built with Elixir 1.9.x (Closes: #939881).
  * Re-add debian/gbp.conf, as this package must use pristine-tar.

 -- Thomas Goirand <zigo@debian.org>  Mon, 23 Sep 2019 10:05:48 +0200

rabbitmq-server (3.7.8-5) unstable; urgency=medium

  [ Ondřej Nový ]
  * Removing gbp.conf, not used anymore or should be specified in the
    developers dotfiles.
  * Use debhelper-compat instead of debian/compat.

  [ Thomas Goirand ]
  * Also package rabbitmq-diagnostics.

 -- Thomas Goirand <zigo@debian.org>  Mon, 17 Jun 2019 22:59:25 +0200

rabbitmq-server (3.7.8-4) unstable; urgency=medium

  * Remove Elixir version patch.
  * Build-depends on Elixir 1.6.6.

 -- Thomas Goirand <zigo@debian.org>  Tue, 30 Oct 2018 08:28:31 +0000

rabbitmq-server (3.7.8-3) unstable; urgency=medium

  * Remove $LANG wrapper hack.

 -- Thomas Goirand <zigo@debian.org>  Mon, 29 Oct 2018 10:25:25 +0100

rabbitmq-server (3.7.8-2) unstable; urgency=medium

  * Wrap rabbitmqctl to set $LANG and avoid warning.

 -- Thomas Goirand <zigo@debian.org>  Mon, 29 Oct 2018 10:13:27 +0100

rabbitmq-server (3.7.8-1) unstable; urgency=medium

  [ Daniel Baumann ]
  * Updating vcs fields.
  * Updating copyright format url.
  * Updating maintainer field.
  * Running wrap-and-sort -bast.
  * Updating standards version to 4.0.0.
  * Removing gbp.conf, not used anymore or should be specified in the
    developers dotfiles.
  * Correcting permissions in debian packaging files.
  * Updating standards version to 4.0.1.
  * Deprecating priority extra as per policy 4.0.1.
  * Updating standards version to 4.1.0.

  [ Ondřej Nový ]
  * d/control: Set Vcs-* to salsa.debian.org
  * d/changelog: Remove trailing whitespaces
  * d/control: Use team+openstack@tracker.debian.org as maintainer

  [ Thomas Goirand ]
  * New upstream release:
    - Fix FTBFS with newer Erlang (Closes: #910623).