@@ -8,7 +8,7 @@ export LC_ALL=en_US.UTF-8
 export LANG=en_US.UTF-8
 
 %:
-	dh $@ --parallel --with python2,systemd
+	dh $@ --parallel --with python3,systemd
 
 override_dh_auto_clean:
 	$(MAKE) clean distclean-manpages
@@ -59,6 +59,10 @@ override_dh_auto_install:
 	rm -f $(DEB_DESTDIR)$(PREFIX)/lib/erlang/lib/rabbitmq_server-*/LICENSE
 	rm -f $(RABBIT_LIB)/LICENSE* $(RABBIT_LIB)/INSTALL*
 
+override_dh_install:
+	dh_install
+	sed -i s/%%VSN%%/$(VERSION)/ $(CURDIR)/debian/rabbitmq-server/usr/bin/rabbitmqadmin
+
 override_dh_auto_clean:
 	rm -f plugins-src/rabbitmq-server plugins/README
 	#dh_auto_clean
@@ -71,3 +75,6 @@ override_dh_python2:
 #	mv $(CURDIR)/debian/rabbitmq-server/usr/sbin/rabbitmqctl $(CURDIR)/debian/rabbitmq-server/usr/sbin/rabbitmqctl-real
 #	cp $(CURDIR)/debian/rabbitmq-debian-wrapper $(CURDIR)/debian/rabbitmq-server/usr/sbin/rabbitmqctl
 #	ln -s rabbitmqctl $(CURDIR)/debian/rabbitmq-server/usr/lib/rabbitmq/bin/rabbitmqctl-real
+
+override_dh_python3:
+	dh_python3 --shebang=/usr/bin/python3
